Add image and sidebar to home page

--- a/frontend/static/global.css
+++ b/frontend/static/global.css
@@ -1,36 +1,6 @@
-.container {
-  width:100%;
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
-}
-
-#nav-bar {
-  text-align: left;
-  background-color: rgba(150,150,255,1);
-}
-
-.contents {
-  display: flex;
-  justify-content: space-between;
-  background-color: rgba(187,100,100,1);
-}
-
-.sidebar-left {
-  width: 300px;
-  display: flex;
-  flex-direction: column;
-  background-color: rgba(0,0,0,1);
-}
-
-.main {
-  background-color: rgba(200,200,200,1);
-  flex: auto;
-}
-
-.sidebar-right {
-  width: 100px;
-  display: flex;
-  flex-direction: column;
-  background-color: rgba(50,50,50,1);
+html, body {
+  width: 100% !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  border: 0 !important;
 }
